web/themes/cfia/scss/modules/_paragraphs.scss
/**
 *
 * Fields
 *
 * All fields displayed on nodes and users.
 */

/* Variables related to this document.
================================================================================================================== */

// Set widths
$image-width-lap: 22.5%;
$image-gutter-lap: 2.5%;

$image-width-desk: 33%;
$image-gutter-desk: 2.5%;

$paragraph-margin-top: 3.5em;

$internal-link-image-width: 112px;


/* Styles
================================================================================================================== */

.paragraphs--internal-link + .paragraphs--internal-link {
  margin-top: $paragraph-margin-top / 1.25;
}

.paragraphs {
  &--text-left,
  &--text-right,
  &--internal-link,
  &--title-paragraph,
  &--youtube,
  &--iframe,
  &--title-only {
    margin-top: $paragraph-margin-top;
    margin-bottom: $paragraph-margin-top;
  }

  // Paragraph Title
  &--title {
    margin-bottom: .5em;
  }

  &--title-item {
    font-size: 1.25em;
  }

  // Text Left
  &--text-inner{
    @include flexbox;
    @include justify-content(space-between);
    @include flex-wrap(no-wrap);
  }

  &--text-left {
    figure {
      margin-top: .25em;
      margin-left: 1.5em;
      min-width: 5em;

      @include flex-basis(5em);
      @include flex-grow(1);
      @include order(2);

      @include breakpoint($breakpoint-lap) {
        @include flex-basis($image-width-lap);

        min-width: $image-width-lap;
        max-width: $image-width-lap;
      }

      @include breakpoint($breakpoint-desk) {
        @include flex-basis($image-width-desk);
        min-width: $image-width-desk;
        max-width: $image-width-desk;
      }
    }
  }

  &--text-right {
    border-bottom: 1px solid $gray-lighter;
    padding-bottom: 2.5em;

    &:last-child {
      border: 0;
    }

    figure {
      margin-top: .25em;
      margin-right: 1.5em;
      min-width: 5em;

      @include flex-basis(5em);
      @include flex-grow(1);
      @include order(1);

      @include breakpoint($breakpoint-lap) {
        @include flex-basis($image-width-lap);

        min-width: $image-width-lap;
        max-width: $image-width-lap;
      }

      @include breakpoint($breakpoint-desk) {
        @include flex-basis($image-width-desk);
        min-width: $image-width-desk;
        max-width: $image-width-desk;
      }
    }
  }

  &--text-left-wrapper {
    @include order(1);
    @include flex-shrink(1);

    .paragraphs--text > p:last-child {
      margin-bottom: 0;
    }
  }

  &--text-right-wrapper {
    @include order(2);
    @include flex-shrink(1);

    .paragraphs--text > p:last-child {
      margin-bottom: 0;
    }
  }


  // Internal Link

  &--internal-link {
    @include flexbox;
    @include justify-content(space-between);
    @include flex-wrap(no-wrap);

    .figure {
      margin-right: 1em;
      min-width: $internal-link-image-width / 2;
      max-width: $internal-link-image-width / 2;

      @include flex-basis(5em);
      @include flex-grow(0);
      @include order(1);

      @include breakpoint($breakpoint-lap) {
        min-width: $internal-link-image-width;
        max-width: $internal-link-image-width;
      }
    }

    a:first-child {
      @include strip-link-styles();
    }

    .paragraphs--text > p:last-child {
      margin-bottom: 0;
    }

    &:last-child {
      margin-bottom: $paragraph-margin-top;
    }
  }

  &--internal-link-wrapper {
    @include order(2);
    @include flex-grow(1);
    @include flex-shrink(1);
  }

  // Title only
  &--title-only {
    font-size: 1.25em;
    margin-bottom: -1.25em;
  }


  // Vertical paragraphs.
  &--vertical {
    margin: 0 -1em;
    @include flexbox;
    @include flex-flow(row wrap);

    figure {
      margin-bottom: 1em;
    }

    .paragraphs--title {
      font-size: 1.5em;
      margin-bottom: 1em;

      a {
        @include strip-link-styles();
      }
    }
  }

  &--vertical-item {
    @include flex(0, 0, 100%);

    box-sizing: border-box;
    display: block;
    padding: 0 1em;
    margin-bottom: $paragraph-margin-top;

    @include breakpoint($breakpoint-lap) {
      @include flex(0, 0, 50%);
    }

    @include breakpoint($breakpoint-desk) {
      @include flex(0, 0, 33%);
    }
  }
}

